# GullyFix

./: CMakeLists.txt  README.md  app.manifest  main.cpp  resource.rc
Functions/: Actions.h
web/: app.js  index.html  style.css
webview2/include/: WebView2EnvironmentOptions.h
